--- a/package.json
+++ b/package.json
@@ -16,11 +16,11 @@
     "commands": [
       {
         "command": "asciidocdocumentbuilder.BuildDocumnent",
-        "title": "Build Document"
+        "title": "%build-document%"
       },
       {
         "command": "asciidocdocumentbuilder.ValidationText",
-        "title": "Lint"
+        "title": "%execute-lint%"
       }
     ],
     "menus": {
